<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/ScrollView01" android:layout_width="wrap_content"
            android:layout_height="wrap_content">
  <RelativeLayout android:layout_width="fill_parent"
                  android:layout_height="fill_parent">

    <LinearLayout android:id="@+id/LinearLayout02" android:orientation="vertical"
                  android:layout_width="fill_parent" android:layout_height="wrap_content">
      <TextView android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingTop="8sp"
                android:layout_marginLeft="5sp"
                android:text="@string/save_choose_purpose_hint"
                android:paddingBottom="4sp"/>
      <LinearLayout android:id="@+id/LinearLayout03"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"/>
      <TableLayout android:id="@+id/TableLayout01"
                   android:layout_height="wrap_content"
                   android:layout_width="fill_parent">

        <TableRow android:id="@+id/TableRow01"
                  android:layout_height="wrap_content" android:layout_width="fill_parent"
                  android:layout_marginLeft="2sp" android:layout_marginRight="4sp">
          <ToggleButton android:layout_height="wrap_content"
                        android:textOff="@string/save_purpose_commute"
                        android:textOn="@string/save_purpose_commute"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/ToggleCommute"
                        android:textSize="11sp"
                        android:drawableTop="@drawable/commute"/>
          <ToggleButton android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textOff="@string/save_purpose_school"
                        android:textOn="@string/save_purpose_school"
                        android:textSize="11sp"
                        android:id="@+id/ToggleSchool"
                        android:drawableTop="@drawable/school"/>
          <ToggleButton android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:id="@+id/ToggleWorkRel"
                        android:textSize="9sp"
                        android:drawableTop="@drawable/workrel"
                        android:layout_weight="0.7"
                        android:textOff="@string/save_purpose_work"
                        android:textOn="@string/save_purpose_work"/>
          <ToggleButton android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textOff="@string/save_purpose_exercise"
                        android:textOn="@string/save_purpose_exercise"
                        android:textSize="11sp"
                        android:id="@+id/ToggleExercise"
                        android:drawableTop="@drawable/exercise"/>
        </TableRow>

        <TableRow android:id="@+id/TableRow02"
                  android:layout_height="wrap_content" android:layout_width="fill_parent"
                  android:layout_marginLeft="2sp" android:layout_marginRight="4sp">
          <ToggleButton android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:textSize="11sp"
                        android:textOff="@string/save_purpose_social"
                        android:textOn="@string/save_purpose_social"
                        android:id="@+id/ToggleSocial"
                        android:drawableTop="@drawable/social"
                        android:nextFocusUp="@+id/ToggleCommute"
                        android:nextFocusDown="@+id/NotesField"/>
          <ToggleButton android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="11sp"
                        android:textOff="@string/save_purpose_shopping"
                        android:textOn="@string/save_purpose_shopping"
                        android:id="@+id/ToggleShopping"
                        android:drawableTop="@drawable/shopping"/>
          <ToggleButton android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:textOff="@string/save_purpose_errand"
                        android:textOn="@string/save_purpose_errand"
                        android:id="@+id/ToggleErrand"
                        android:textSize="11sp"
                        android:drawableTop="@drawable/errands"
                        android:layout_weight="0.7"/>
          <ToggleButton android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="11sp"
                        android:textOff="@string/save_purpose_other"
                        android:textOn="@string/save_purpose_other"
                        android:id="@+id/ToggleOther"
                        android:drawableTop="@drawable/other"/>
        </TableRow>

      </TableLayout>

      <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:paddingBottom="2sp"
                android:paddingTop="4sp"
                android:id="@+id/TextPurpDescription"
                android:text="@string/save_wide_blank"
                android:lines="3"
                android:bufferType="spannable"
                android:textSize="14sp"/>
      <EditText android:bufferType="editable"
                android:cursorVisible="true"
                android:layout_width="fill_parent"
                android:selectAllOnFocus="true"
                android:layout_height="fill_parent"
                android:id="@+id/NotesField"
                android:layout_marginTop="10sp"
                android:inputType="text"
                android:hint="@string/save_trip_comments_hint"
                android:layout_marginRight="2sp"
                android:layout_marginLeft="2sp"
                android:maxLength="255"
                android:nextFocusDown="@+id/ButtonSubmit"
                android:nextFocusRight="@+id/ButtonSubmit"
                android:nextFocusUp="@+id/ToggleSocial"
                android:imeOptions="actionDone"/>

      <TableLayout android:layout_height="wrap_content" android:layout_width="fill_parent">
        <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent"
                  android:layout_marginLeft="2sp" android:layout_marginRight="4sp">
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/save_age"/>
          <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/age"/>
        </TableRow>
        <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent"
                  android:layout_marginLeft="2sp" android:layout_marginRight="4sp">
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/save_gender"/>
          <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/gender"/>
        </TableRow>
        <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent"
                  android:layout_marginLeft="2sp" android:layout_marginRight="4sp">
          <LinearLayout android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:textSize="14sp"
                      android:text="@string/save_level_of"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:textSize="14sp"
                      android:text="@string/save_cycling"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:textSize="14sp"
                      android:text="@string/save_experience"/>
          </LinearLayout>
          <Spinner android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:layout_weight="1"
                   android:id="@+id/experience"/>
        </TableRow>
      </TableLayout>

      <LinearLayout android:id="@+id/LinearLayout01"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:paddingTop="10sp">
        <Button android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
                android:id="@+id/ButtonDiscard"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/save_discard_button"/>
        <Button android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:drawableLeft="@android:drawable/ic_menu_save"
                android:id="@+id/ButtonSubmit"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/save_submit_button"/>
      </LinearLayout>
    </LinearLayout>
  </RelativeLayout>
</ScrollView>
